syntax = "proto3";

package opendut.carl.services.metadata_provider;

import "opendut/model/util/metadata.proto";

service MetadataProvider {
  rpc Version(VersionRequest) returns (VersionResponse) {}
}

message VersionRequest {}

message VersionResponse {
  opendut.model.util.VersionInfo version_info = 1;
}
